--- a/settings.html
+++ b/settings.html
@@ -35,7 +35,7 @@
         }
 
         .settings-container h1 {
-            color: gold;
+            color: white;
             font-size: 24px;
             margin-bottom: 20px;
             font-weight: bold;
@@ -116,7 +116,7 @@
                 <input type="checkbox" id="beforeUnloadToggle" />
             </div>
             <div>
-                <label for="autocloakToggle">Autocloak</label>
+                <label for="autocloakToggle">Auto-about:blank</label>
                 <input type="checkbox" id="autocloakToggle" />
             </div>
         </div>
