--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Search the web freely with our web proxy!">
     <meta property="og:image" content="/storage/images/logo.png">
     <title>Home</title>
-    <link rel="icon" href="../storage/images/googleclassroom.png" type="image/png">
+    <link rel="icon" href="https://voucan-us4.github.io/storage/images/googleclassroom.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/storage/css/prox.css">
   </head>
