--- a/static/index.html
+++ b/static/index.html
@@ -3,61 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tab</title>
-    <link rel="stylesheet" href="/storage/css/evenmorestyles.css">
+    <link rel="stylesheet" href="../storage/css/evenmorestyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-
-        h1 {
-            margin: 0;
-            padding-top: 20px;
-        }
-
-        #search-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        #uv-form {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .search-bar-home {
-            padding: 10px;
-            margin-right: 10px;
-        }
-
-        #search-button {
-            padding: 10px 15px;
-            cursor: pointer;
-        }
-
-        .desc {
-            margin-top: 10px;
-            text-align: center;
-        }
-
-        #dynamicParagraph {
-            text-align: center;
-            font-size: 1.5em;
-            margin: 20px 0;
-        }
-    </style>
+    <link rel="stylesheet" href="../storage/css/static.css">
 </head>
 <body>
+
+<script src="/particles.js"></script>
+  <script src="/app.js"></script>
+<div id="particles-js"></div>
 
     <h1>Proxy</h1>
     <p id="dynamicParagraph">(TEXT)</p>
@@ -99,6 +53,15 @@
         paragraph.addEventListener('click', changeText);
         window.onload = changeText;
     </script>
+    <script type="text/javascript" src="/storage/js/background.js"></script>
+    <script>
+    async function regsw(){
+        await navigator.serviceWorker.register("/static/uv-sw.js", {
+            scope: "/static/",
+        });
+    }
 
+    regsw();
+    </script>
 </body>
 </html>
