--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-<script src="/particles.js"></script>
-  <script src="/app.js"></script>
+<script src="/storage/js/particles.js"></script>
+  <script src="/storage/js/app.js"></script>
 <div id="particles-js"></div>
 
     <h1>Proxy</h1>
