--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
     <h1>Proxy</h1>
     <p id="dynamicParagraph">(TEXT)</p>
 
-    <div id="search-container">
+<div id="search-container">
     <form id="uv-form">
         <input id="uv-search-engine" value="https://duckduckgo.com/?q=${encodeURIComponent(input)}" type="hidden"/>
         <input id="uv-address" type="text" class="search-bar-home" placeholder="Type ://games for games" />
@@ -60,8 +60,10 @@
         } else if (input === "://movies") {
             window.location.href = "https://yourmovies.com"; // Replace with the actual movies URL
         } else {
-            // General search if input doesn't match the predefined URLs
-            window.location.href = "https://duckduckgo.com/?q=" + encodeURIComponent(input);
+            // If it doesn't match any custom terms, perform a regular search
+            const query = encodeURIComponent(input);
+            const searchEngineUrl = document.getElementById("uv-search-engine").value;
+            window.location.href = searchEngineUrl.replace('${encodeURIComponent(input)}', query); // Perform the search using DuckDuckGo
         }
     }
 
@@ -75,6 +77,7 @@
         }
     });
 </script>
+
 
 </div>
         
