--- a/static/index.html
+++ b/static/index.html
@@ -10,112 +10,58 @@
 <body>
 
 <script src="/storage/js/particles.js"></script>
-<script src="/storage/js/app.js"></script>
+  <script src="/storage/js/app.js"></script>
 <div id="particles-js"></div>
 
-<h1>Proxy</h1>
-<p id="dynamicParagraph">(TEXT)</p>
+    <h1>Proxy</h1>
+    <p id="dynamicParagraph">(TEXT)</p>
 
-<div id="search-container">
-    <form id="uv-form">
-        <input id="uv-search-engine" value="https://duckduckgo.com/?q=" type="hidden"/>
-        <label for="uv-address">Search:</label>
-        <input id="uv-address" type="text" class="search-bar-home" placeholder="Type ://games for games" />
-        <button id="search-button" type="submit">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
-    </form>
-</div>
+    <div id="search-container">
+        <form id="uv-form">
+            <input id="uv-search-engine" value="https://www.google.com/search?q=%s" type="hidden"/>
+            <input id="uv-address" type="text" class="search-bar-home" placeholder="Search or enter a URL" />
+            <button id="search-button" onclick="submitSearch()">SEARCH <i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
 
-<script>
-    // Array of placeholder text for the search bar
-    const placeholders = [
-        "Type ://games for games",
-        "Type ://apps for apps",
-        "Type ://settings for settings",
-        "Type ://movies for movies"
-    ];
-    let placeholderIndex = 0;
+        <div class="desc left-margin">
+            <p id="uv-error"></p>
+            <pre id="uv-error-code"></pre>
+        </div>
+    </div>
 
-    // Function to cycle through the placeholder text
-    function cyclePlaceholder() {
-        const searchInput = document.getElementById("uv-address");
-        searchInput.placeholder = placeholders[placeholderIndex];
-        placeholderIndex = (placeholderIndex + 1) % placeholders.length; // Cycle through the array
-    }
+    <script src="/static/uv/uv.bundle.js" defer></script>
+    <script src="/static/uv/uv.config.js" defer></script>
+    <script src="/static/register-sw.js" defer></script>
+    <script src="/static/search.js" defer></script>
+    <script src="/static/index.js" defer></script>
 
-    // Start cycling the placeholder text every 3 seconds
-    window.addEventListener('DOMContentLoaded', (event) => {
-        setInterval(cyclePlaceholder, 3000); // Change every 3 seconds
-    });
+    <script>
+        const phrases = [
+            "us5 when",
+            "credits to brunys for the proxy stuff",
+            "idk",
+            "there is a nuclear bomb heading for your location. please seek shelter immediately",
+        ];
 
-    // Function to handle form submission and redirects
-    function submitSearch(event) {
-        event.preventDefault(); // Prevent form submission to handle it via JavaScript
+        const paragraph = document.getElementById('dynamicParagraph');
 
-        const input = document.getElementById("uv-address").value.trim().toLowerCase();
-
-        // Handle custom redirects for "games", "apps", "settings", "movies"
-        if (input === "://games") {
-            window.location.href = "https://yourgamespage.com"; // Replace with the actual games URL
-        } else if (input === "://apps") {
-            window.location.href = "https://yourapps.com"; // Replace with the actual apps URL
-        } else if (input === "://settings") {
-            window.location.href = "https://yoursettings.com"; // Replace with the actual settings URL
-        } else if (input === "://movies") {
-            window.location.href = "https://yourmovies.com"; // Replace with the actual movies URL
-        } else {
-            // If it doesn't match any custom terms, perform a regular search
-            const query = encodeURIComponent(input);  // Encode the search query
-            const searchEngineUrl = document.getElementById("uv-search-engine").value;
-            
-            // Properly concatenate the URL with the query
-            window.location.href = searchEngineUrl + query; // Perform the search using DuckDuckGo
+        function changeText() {
+            const randomPhrase = phrases[Math.floor(Math.random() * phrases.length)];
+            paragraph.textContent = randomPhrase;
         }
-    }
 
-    // Attach the submitSearch function to form submission event
-    document.getElementById("uv-form").addEventListener("submit", submitSearch);
-
-    // Optional: Trigger the submitSearch function when the Enter key is pressed (better usability)
-    document.getElementById("uv-address").addEventListener("keydown", function(event) {
-        if (event.key === "Enter") {
-            submitSearch(event);
-        }
-    });
-
-    // Random phrases for the dynamic paragraph
-    const phrases = [
-        "us5 when",
-        "credits to brunys for the proxy stuff",
-        "idk",
-        "there is a nuclear bomb heading for your location. please seek shelter immediately",
-    ];
-
-    const paragraph = document.getElementById('dynamicParagraph');
-
-    function changeText() {
-        const randomPhrase = phrases[Math.floor(Math.random() * phrases.length)];
-        paragraph.textContent = randomPhrase;
-    }
-
-    paragraph.addEventListener('click', changeText);
-    window.onload = changeText;
-</script>
-
-<script src="/storage/js/background.js"></script>
-
-<script>
-    async function regsw() {
-        try {
-            await navigator.serviceWorker.register("/static/uv-sw.js", {
-                scope: "/static/",
-            });
-        } catch (error) {
-            console.error("Service Worker registration failed:", error);
-        }
+        paragraph.addEventListener('click', changeText);
+        window.onload = changeText;
+    </script>
+    <script type="text/javascript" src="/storage/js/background.js"></script>
+    <script>
+    async function regsw(){
+        await navigator.serviceWorker.register("/static/uv-sw.js", {
+            scope: "/static/",
+        });
     }
 
     regsw();
-</script>
-
+    </script>
 </body>
 </html>
